# ManagedObject

./: .gitmodules  CMakeLists.txt  README.md  gdb.txt  m.sh  make.sh
include/: managed_object.h  managed_object_bits.h  managed_object_hashmap.h  managed_object_hashmap_base.h  managed_object_heap.h  managed_object_obj.h  managed_object_obj_metadata.h  managed_object_pagelist.h
src/: managed_object.cpp  managed_object_hashmap.c  managed_object_heap.cpp  managed_object_obj.c
tests/: CMakeLists.txt  managed_object_tests.cpp
